--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -21,7 +21,7 @@ body{
 
 a {
 
-	color: black;
+	color: white;
 	text-decoration: none;
 	font-weight: bold;
 
@@ -35,7 +35,7 @@ a:hover {
 
 header {
 
-	background: #fff;
+	background: transparent;
 	width: 100%;
 	height: 110px;
 	position: fixed;
@@ -51,7 +51,7 @@ header {
 	float: left;
 	width: 320px;
 	height: 100px;
-	background: url("Moonshot-Logo-Name-v1-320px.png") no-repeat center;
+	background: url("Moonshot-Logo-Name-v1-320px-White.png") no-repeat center;
 	display: block;
 
 }
@@ -74,5 +74,12 @@ li {
 	display: inline-block;
 	float: left;
 	padding: 10px;
+
+}
+
+h1 {
+
+	color: white;
+	display: inline-block;
 
 }
