Feature added (ECF): SCOOP'd!!!
* ECF: SCOOP'd and added needful libs
* Add new pages for base, blogs, contact, and whatis
* Changes to the router

--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -72,6 +72,13 @@ li {
 
 article {
   clear: both;
+  position: fixed;
+  left: 50px;
+  bottom: 300px;
+  width: 100%;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 article p {
