Feature changed (Blogs): Lorem Ipsum test stuff
* Just to see the blogging work ... we'll put something more
sophisticated behind this.

--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -43,6 +43,10 @@ article {
   color: white;
 }
 
+article.content-scrollable {
+  overflow: scroll;
+}
+
 footer {
   float: center;
   width: 1200px;
